--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,5 +1,6 @@
 site_name: Kringle Web
-site_url: http://kringle.info/
+site_url: https://kringle.info/static/mkdocs/
+site_dir: ./static/mkdocs
 nav:
     - Home: index.md
     - About: about.md
