--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,6 +1,6 @@
 site_name: Kringle Web
 site_url: https://kringle.info/static/doc/
-site_dir: ./static/mkdocs
+site_dir: ./static/doc
 use_directory_urls: false
 nav:
     - Home: index.md
