--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,7 @@ services:
       - S3_ENDPOINT=https://s3.hidrive.strato.com
       - BUCKET_PUBLIC=kringle-public
       - BUCKET_PRIVATE=kringle-private
+      - MAIL_SERVER=host.docker.internal
     command: /home/flask/flask.sh
     user: flask
     ports:
@@ -21,6 +22,8 @@ services:
     container_name: kringle_web
     volumes:
       - ./.aws/:/home/flask/.aws/
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
 
   database:
     image: postgres
