Add help for navigation

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,4 +1,4 @@
-site_name: Kringle Web
+site_name: Kringle Info
 site_url: https://kringle.info/static/doc/
 site_dir: ./static/doc
 use_directory_urls: false
